--- a/frontend/lang/id.json
+++ b/frontend/lang/id.json
@@ -1,6 +1,11 @@
 {
   "route": {
-    "home": "Beranda"
+    "home": "Beranda",
+    "settings": {
+      "index": "Setting",
+      "password": "Password",
+      "profile": "Profil"
+    }
   },
   "ok": "Ok",
   "cancel": "Batal",
