--- a/frontend/lang/id.json
+++ b/frontend/lang/id.json
@@ -1,8 +1,10 @@
 {
   "route": {
+    "path": {
+      "settings": "Setting"
+    },
     "home": "Beranda",
     "settings": {
-      "index": "Setting",
       "password": "Password",
       "profile": "Profil"
     }
