--- a/frontend/lang/id.json
+++ b/frontend/lang/id.json
@@ -4,7 +4,8 @@
       "settings": "Setting"
     },
     "sample": {
-      "index": "Penerimaan Sampel"
+      "index": "Penerimaan Sampel",
+      "add": "Pengambilan / Penerimaan Sampel Baru"
     },
     "home": "Beranda",
     "settings": {
