check role validation

--- a/frontend/lang/id.json
+++ b/frontend/lang/id.json
@@ -8,6 +8,7 @@
       "add": "Pengambilan / Penerimaan Sampel Baru"
     },
     "home": "Beranda",
+    "error-role": "Error",
     "settings": {
       "password": "Password",
       "profile": "Profil"
