fix ekstraksi & import hasil pcr

--- a/frontend/lang/id.json
+++ b/frontend/lang/id.json
@@ -8,6 +8,7 @@
       "add": "Pengambilan / Penerimaan Sampel Baru"
     },
     "ekstraksi": {
+      "invalid": "Invalid",
       "index": "Ekstraksi",
       "penerimaan": "Penerimaan",
       "terkirim": "Sampel Terkirim",
