--- a/frontend/lang/id.json
+++ b/frontend/lang/id.json
@@ -31,7 +31,7 @@
         "verified": "Terverifikasi"
       },
       "detail": "Detail Sampel",
-      "edit": "Verifikasi Hasil"
+      "edit": "Hasil Pemeriksaan"
     },
     "validasi": {
       "index": {
