ReDesign: update style in all chamber

--- a/frontend/lang/en.json
+++ b/frontend/lang/en.json
@@ -43,8 +43,8 @@
     "show": "Tampilkan",
     "nodata_show": "Tidak ada data",
     "search": "Cari",
-    "number": "No",
-    "actions": "Aksi",
+    "number": "NO",
+    "actions": "AKSI",
     "previous": "Sebelumnya",
     "next": "Selanjutnya",
     "to": "Sampai"
