add registration form

--- a/frontend/lang/id.json
+++ b/frontend/lang/id.json
@@ -83,6 +83,7 @@
   "forgot_password": "Lupa Password?",
   "confirm_password": "Konfirmasi Password",
   "name": "Nama",
+  "username": "Nama Pengguna",
   "toggle_navigation": "Navigasi",
   "home": "Beranda",
   "you_are_logged_in": "Anda sudah login!",
