add column koordinator on user

--- a/frontend/lang/id.json
+++ b/frontend/lang/id.json
@@ -74,6 +74,7 @@
   "token_expired_alert_text": "Mohon login lagi untuk melanjutkan.",
   "login": "Log In",
   "register": "Daftar",
+  "coordinator": "Koordinator",
   "page_not_found": "Halaman Tidak Ditemukan",
   "go_home": "Kembali ke Beranda",
   "logout": "Logout",
