--- a/frontend/lang/id.json
+++ b/frontend/lang/id.json
@@ -60,7 +60,8 @@
       "list-hasil-inkonklusif": "Hasil Sampel Invalid"
     },
     "user": {
-      "index": "Pengguna"
+      "index": "Pengguna",
+      "show": "Lihat"
     },
     "registration": {
       "index": "Registrasi"
