Akun Perujuk: fix route terima sampel registrasi; refactor code;

--- a/frontend/lang/id.json
+++ b/frontend/lang/id.json
@@ -10,7 +10,8 @@
         "detail": "Detail Registrasi",
         "update": "Edit Data Registrasi",
         "import-excel": "Import Excel",
-        "export-excel": "Export Excel"
+        "export-excel": "Export Excel",
+        "terima": "Terima Sampel"
       }
     },
     "sample": {
