set env local language

--- a/frontend/lang/id.json
+++ b/frontend/lang/id.json
@@ -274,6 +274,5 @@
     "header_index": "Riwayat Login",
     "header_list": "Daftar Riwayat Login"
   },
-  "create": "Tambah",
-  "username": "Username"
+  "create": "Tambah"
 }
