--- a/frontend/lang/id.json
+++ b/frontend/lang/id.json
@@ -5,6 +5,7 @@
     },
     "registrasi": {
       "sampel": "Registrasi Sampel",
+      "perujuk": "Registrasi Sampel",
       "index": {
         "tambah": "Tambah Registrasi Baru",
         "detail": "Detail Registrasi",
@@ -12,6 +13,11 @@
         "import-excel": "Import Excel",
         "export-excel": "Export Excel",
         "terima": "Terima Sampel"
+      },
+      "index2": {
+        "tambah": "Tambah Registrasi Baru",
+        "detail": "Detail Registrasi",
+        "update": "Edit Data Registrasi"
       }
     },
     "sample": {
@@ -36,13 +42,18 @@
       "password": "Password",
       "profile": "Profil"
     },
-    "verifikasi": {
+    "hasil-pemeriksaan": {
       "index": {
         "unverified": "Hasil Pemeriksaan",
-        "verified": "Terverifikasi"
-      },
-      "detail": "Detail Sampel",
-      "edit": "Hasil Pemeriksaan"
+        "detail": "Detail Sampel",
+        "edit": "Hasil Pemeriksaan"
+      }
+    },
+    "hasil-pemeriksaan-perujuk": {
+      "index": {
+        "unverified": "Hasil Pemeriksaan",
+        "detail": "Detail Sampel"
+      }
     },
     "validasi": {
       "index": {
