--- a/frontend/lang/id.json
+++ b/frontend/lang/id.json
@@ -91,7 +91,7 @@
   "forgot_password": "Lupa Password?",
   "confirm_password": "Konfirmasi Password",
   "name": "Nama",
-  "username": "Nama Pengguna",
+  "username": "Username",
   "toggle_navigation": "Navigasi",
   "home": "Beranda",
   "you_are_logged_in": "Anda sudah login!",
