add hasil pemeriksaan in superadmin account

--- a/frontend/lang/id.json
+++ b/frontend/lang/id.json
@@ -55,6 +55,12 @@
         "detail": "Detail Sampel"
       }
     },
+    "hasil-pemeriksaan-admin": {
+      "index": {
+        "main": "Hasil Pemeriksaan",
+        "detail": "Detail Sampel"
+      }
+    },
     "validasi": {
       "index": {
         "unvalidate": "Menunggu Validasi",
