add feature kelola akun perujuk

--- a/frontend/lang/id.json
+++ b/frontend/lang/id.json
@@ -81,6 +81,12 @@
       "show": "Detail",
       "edit": "Edit Data"
     },
+    "perujuk": {
+      "index": "Perujuk",
+      "show": "Detail",
+      "edit": "Edit Data",
+      "add": "Tambah Data"
+    },
     "registration": {
       "index": "Registrasi"
     }
